modules/concepts/client/css/panel.css
/* ... */
.minimized .panel-button span {
    font-size: 10pt;
}
.minimized .play.learnmode-true {
    padding: 2pt 0 0 3pt;
}
.minimized .play.learnmode-false {
    padding: 2pt 0 0 5pt;
}
.maximized .play.learnmode-true .map-icon {
    top: 5px;
}
.maximized .play.learnmode-true {
    padding-top: 7px;
}
.maximized .play.learnmode-false {
    padding-top: 7px;
}

.course-list {
    /*left: -10px;*/
    padding-left: 0;
    list-style-type: none;
    position: relative;
}
.course-list *, .course-list .concept {
    border-color: inherit;
}

.course-list > .concept > a > .concept-line {
    top: 0px;
    min-height: 0;
}

.course-list > .concept > a {
    padding-bottom: 15px;
}

.concept-list {
    position: relative;
    list-style-type: none;
    top: 12px;
    padding-left: 11px;
    padding-top: 8px;
    left: 14px;
}

.concept-list > .concept {
    /*height: 29pt;*/
    margin-bottom: 15px;
}


.concept-panel p {
    margin-top: 10pt;
}

.panel-tab {
    vertical-align: bottom;
}

a[disabled] {
    pointer-events: none;
    /*color: #666;*/
}
a[disabled] .map-icon {
    -webkit-filter: grayscale(100%);
}

.concept-list > li {
    position: relative;
    display: inline-block;
    width: 100%;
}
.concept-list > li > a > span.glyphicon {
    z-index: 3;
    position: absolute;

}
.concept-list .flag {
    margin: 10pt;
    position: absolute;
    left: -4pt;
    top: -6pt;
}


.concept-tick, .concept-seen {
    left: 5pt;
    top: 4pt;
    position: absolute;
    z-index: 3;
}

.concept-list-nested .concept-list-nested .glyphicon {
    font-size: 70%;
}

.concept-list-nested .concept-list-nested .concept-tick, .concept-list-nested .concept-list-nested .concept-seen {
    top: 6px;
    left: 10px;
}
.concept-list-nested .concept-list-nested .flag {
    top: -6px;
    left: -3px;
}


.concept > a {
    position: relative;
    top: 0;
    /*left: 30pt;*/
    padding-top: 3px;
    /*padding-left: 30pt;*/
    z-index: 2;
    text-decoration: none;
}


.concept-circle {
    width: 20pt;
    height: 20pt;
    display: block;
    border-radius: 10pt;
    /* border: 1px solid #999; */
    z-index: 2;
    position: absolute;
    top: 0;
    box-shadow: 1px 1px 3px #aaa;
}

.active > a > .concept-circle, .concept-list .concept:hover > a > .concept-circle, .hover > a > .concept-circle, .concept-list .concept:hover > a > .concept-circle  {

    border: 2px solid #444466;
}

.flag {
    display: none;
}
.goal > a > .flag {
    display: block;
    z-index:3;
}
/*
.learnmode-no .concept-list .concept > a:hover > .flag {
    display: block;
}*/


.concept-line {
    /*background: #4C4B86;*/
    border-left-width: 2px;
    border-left-style: solid;
    width: 2px;
    z-index: 0 !important;
    min-height: 37px;
    position: absolute;
    display: block;
    left: 14px;
    top: -7px;
    height: 100%;

}

/*.concept > a {
    padding-bottom: 19px;
}*/
.concept > a > .concept-title {
    position: relative;
    left: 30pt;
    margin-right: 18px;
}

input.concept-title.admin {
    height: 24px;
    padding: 0 5px;
    background: #fff;
    border: 1px solid #ddd;
    width: 60%;
}


.concept-list-nested:before, .concept-list:before {
    /*border-top: 2px solid #4C4B86;*/
    border-top-color: inherit;
    border-top-width: 2px;
    border-top-style: solid;
    content: " ";
    width: 25px;
    height: 1px;
    position: absolute;
    left: 0px;
    top: 0px;
    display: block;
}
.concept-list-nested:after {
    /*border-top: 2px solid #4C4B86;*/
    border-top-color: inherit;
    border-top-width: 2px;
    border-top-style: solid;
    content: " ";
    width: 25px;
    height: 1px;
    position: relative;
    left: -10px;
    top: 0px;
    display: block;
}
.concept-list-nested .concept-list-nested:after {
    top: -2px;
}/*
.concept-list-nested .concept-list-nested:before {
    left: -1px;
}*/

.course-list > .concept > .concept-list > .concept:last-child > .concept-list:after, .course-list > .concept > .concept-list > .concept:last-child > .concept-list > .concept:last-child > .concept-list:after {
    border-top: none;
}

.course-list > .concept > .concept-list > .concept:last-child > .concept-list-nested > .concept.inactive:last-child > a > .concept-line,
.course-list > .concept > .concept-list > .concept:last-child > .concept-list-nested > .concept:last-child > .concept-list-nested > .concept:last-child > a > .concept-line,
.course-list > .concept > .concept-list > .concept.inactive:last-child > a > .concept-line {
    min-height: 10px;
    height: 13px;
}

.course-list > .concept > .concept-list > .concept.active:last-child > a > .concept-line,
.concept-list > .concept:last-child > .concept-list-nested > .concept.active:last-child > a > .concept-line,
.course-list > .concept > .concept-list > .concept.hover:last-child > a > .concept-line,
.concept-list > .concept:last-child > .concept-list-nested > .concept.hover:last-child > a > .concept-line {
    min-height: 30px;
    height: 100%;
}

.concept-list-nested {
    position: relative;
    margin-top: -4px;
    /*margin-left: 14px;*/
    margin-bottom: 3px;
    margin-right: 20px;
    padding-left: 8pt;
    padding-top: 6pt;
}

.concept-list-nested .concept-line {
    left: 14px;
    /*min-height: 35px;*/
    margin-bottom: -5px;

}
.concept-list-nested .concept-circle {
    width: 16pt;
    height: 16pt;
    border-radius: 8pt;
    left: 3px;
    top: 2px;
}

.concept-list-nested .concept-list-nested .concept-circle {
    width: 10pt;
    height: 10pt;
    border-radius: 5pt;
    left: 8px;
    top: 6px;
}

.concept-list-nested .concept {

}

.concept-list-nested .flag {
    left: -7px;
    top: -9px;
    color: #333;
}

.concept-list-nested .concept-list-nested {
    margin-top: -4px;
    /* margin-bottom: 11px; */

    padding-bottom: 4px;
    /*margin-bottom: -4px;*/
}
.concept-list-nested > .concept:last-child > .concept-list-nested {
    margin-bottom: -4px;
}
/* ... */

